--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.13.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
-    "mongoose": "^8.16.2",
     "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "prisma": "^6.13.0"
   }
 }
