--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "socket.io": "^4.8.1"
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "prisma": "^6.13.0"
