--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "projet-griffon",
-  "version": "1.0.0",
-  "description": "A tableTop-app",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@prisma/client": "^6.13.0",
-    "bcrypt": "^6.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.0.1",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "zod": "^4.1.12"
-  },
-  "devDependencies": {
-    "prisma": "^6.13.0"
-  }
+    "name": "projet-griffon",
+    "version": "1.0.0",
+    "description": "A tableTop-app",
+    "main": "server.js",
+    "scripts": {
+        "test": "vitest"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@prisma/client": "^6.13.0",
+        "bcrypt": "^6.0.0",
+        "cors": "^2.8.5",
+        "dotenv": "^17.0.1",
+        "express": "^5.1.0",
+        "jsonwebtoken": "^9.0.2",
+        "zod": "^4.1.12"
+    },
+    "devDependencies": {
+        "prisma": "^6.13.0",
+        "vitest": "^4.0.8"
+    }
 }
