--- a/package.json
+++ b/package.json
@@ -4,7 +4,17 @@
     "description": "A tableTop-app",
     "main": "server.js",
     "scripts": {
-        "test": "vitest"
+        "dev": "node ./server",
+        "start": "node ./server.js",
+        "generate": "prisma generate --schema=./src/prisma/schema.prisma",
+        "generate:test": "prisma generate --schema=./src/prisma/schema.test.prisma",
+        "generate:all": "npm run generate && npm run generate:test",
+        "migrate:dev": "prisma migrate dev --schema=./src/prisma/schema.prisma",
+        "db:push:test": "npx prisma db push --force-reset --schema=./src/prisma/schema.test.prisma",
+        "test": "vitest",
+        "test:unit": "vitest",
+        "test:integration": "dotenv -e .env.test -- vitest run --config vitest.integration.config.js",
+        "test:coverage": "vitest run --coverage"
     },
     "author": "",
     "license": "ISC",
@@ -18,6 +28,8 @@
         "zod": "^4.1.12"
     },
     "devDependencies": {
+        "@vitest/coverage-v8": "^4.0.8",
+        "dotenv-cli": "^11.0.0",
         "prisma": "^6.13.0",
         "vitest": "^4.0.8"
     }
