--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
         "generate:all": "npm run generate && npm run generate:test",
         "migrate:dev": "prisma migrate dev --schema=./src/prisma/schema.prisma",
         "db:push:test": "npx prisma db push --force-reset --schema=./src/prisma/schema.test.prisma",
-        "test": "vitest",
-        "test:unit": "vitest",
+        "test": "vitest run",
+        "test:unit": "vitest run",
+        "test:watch": "vitest",
         "test:integration": "dotenv -e .env.test -- vitest run --config vitest.integration.config.js",
         "test:coverage": "vitest run --coverage"
     },
