--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
               run: npm ci
 
             - name: Generate Prisma client (test version)
-              run: npm run generate:test
+              run: npm run generate:all
 
             - name: Run tests
               run: npm run test
